fix dark mode

--- a/app/globals.css
+++ b/app/globals.css
@@ -100,7 +100,7 @@
   --sidebar-ring: oklch(0.606 0.25 292.717);
 }
 
-[data-theme='dark'] {
+.dark {
   --background: oklch(0.141 0.005 285.823);
   --foreground: oklch(0.985 0 0);
   --card: oklch(0.21 0.006 285.885);
